--- a/app/views/water/current/irrigated-land.html
+++ b/app/views/water/current/irrigated-land.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Irrigation land size
+  Irrigation land
 {% endblock %}
 
 {% block beforeContent %}
@@ -9,63 +9,71 @@
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-            <div class="govuk-form-group">
-               <h1 class="govuk-label-wrapper govuk-!-padding-bottom-2">
-                  <label class="govuk-label govuk-label--l" for="irrigated-land-current">
-                    Will the area of irrigated land change?
-                  </label>
-                </h1>
-                <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-3">
+        <h1 class="govuk-heading-l">Irrigated land</h1>
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="irrigated-land">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <h2 class="govuk-fieldset__heading">
                 How much land is currently irrigated per year?
-                <p id="irrigated-land-current-hint" class="govuk-hint">
+              </h2>
+              </legend>
+                <div id="irrigated-land" class="govuk-hint">
                   Enter figure in hectares, for example 543.5
-                </p>
                 </div>
+
                 <div class="govuk-input__wrapper govuk-!-margin-bottom-8">
                 <input class="govuk-input govuk-input--width-5" id="irrigated-land-current" name="irrigated-land-current" type="text" spellcheck="false" aria-describedby="irrigated-land-current-hint"  value="{{ data['irrigated-land-current'] }}">
                 <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                 </div>
-                <div class="govuk-body govuk-!-margin-bottom-0">
-                   How much land will be irrigated per year after the project?
-                  <p id="irrigated-land-target-hint" class="govuk-hint">
-                    Enter figure in hectares, for example 543.5
-                  </p>
-                </div>
-                <div class="govuk-input__wrapper govuk-!-margin-bottom-7">
-                  <input class="govuk-input govuk-input--width-5" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
-                    <div class="govuk-input__suffix" aria-hidden="true">ha</div>
-                </div>
-         
-        
-              <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">
+
+
+
+                  <fieldset class="govuk-fieldset" aria-describedby="irrigated-land">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                      <h2 class="govuk-fieldset__heading">
+                        How much land will be irrigated per year after the project?
+                      </h2>
+                      </legend>
+                        <div id="irrigated-land" class="govuk-hint">
+                          Enter figure in hectares, for example 543.5
+                        </div>
+
+                        <div class="govuk-input__wrapper govuk-!-margin-bottom-7">
+                          <input class="govuk-input govuk-input--width-5" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
+                          <div class="govuk-input__suffix" aria-hidden="true">ha</div>
+                        </div>
+
+
+              <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                 Continue
               </button>
 
               {% if data['COMPLETED'] == true %}
                 <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-                  class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
+                  class="govuk-button govuk-button--secondary " data-module="govuk-button"
                 >
-                  Back to summary page
+                  Back to score
                 </button>
               {% endif %}
-            </div>   
-        </form>                     
-    </div> 
-    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+            </div>
+        </form>
+    </div>
+
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                       <li>improve productivity</li>
                    </ul>
-        </div>         
-      </aside>   
+        </div>
+      </aside>
   </div>
-</main>  
+</main>
 
 {% endblock %}
