--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -9,22 +9,23 @@
 {% endblock %}
 
 {% block content %}
-<mian class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+        <h1 class="govuk-heading-l">Irrigation systems</h1>
+
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-padding-top-2">
-              <h1 class="govuk-fieldset__heading">
-                Will your irrigation system change? 
-              </h1>
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <h2 class="govuk-fieldset__heading">
+                Will your irrigation system change?
+              </h2>
             </legend>
-          <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
-            What systems are currently used to irrigate?
-            <span class="govuk-caption-m">Select one or two options</span>
-            <br>
-           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+
+            <div id="irrigation-systems" class="govuk-hint">
+            Select one or two options</div>
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-systems-current-1" name="irrigation-systems-current" type="checkbox" value="Trickle" {{ checked("irrigation-systems-current", "Trickle") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-1">
@@ -68,16 +69,20 @@
                 </label>
               </div>
             </div>
-          </div>
+
           </fieldset>
         </div>
-        <br>
+
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <h2 class="govuk-fieldset__heading">
                 What systems will be used to irrigate?
-               <span class="govuk-caption-m">Select one or two options</span>
-              <br>
+              </h2>
+            </legend>
+
+            <div id="irrigation-systems-target" class="govuk-hint">
+              Select one or two options</div>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="irrigation-systems-target-1" name="irrigation-systems-target" type="checkbox" value="Trickle" {{ checked("irrigation-systems-target", "Trickle") }}>
@@ -122,34 +127,34 @@
                   </label>
                 </div>
               </div>
-            </div>  
+
           </fieldset>
         </div>
-        <br>
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button"
           >
-            Back to summary page
+            Back to score
           </button>
         {% endif %}
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-5">
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                     <li>improve the environment</li>
                     <li>improve water sustainability</li>
                    </ul>
-        </div>         
-      </aside>   
+        </div>
+      </aside>
     </div>
-</main>
+
 {% endblock %}
