--- a/app/views/water/current/irrigation-water-source.html
+++ b/app/views/water/current/irrigation-water-source.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Irrigation water source
+  Water source
 {% endblock %}
 
 {% block beforeContent %}
@@ -10,21 +10,22 @@
 
 {% block content %}
 
-<main class="govuk-main-wrapper">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+          <h1 class="govuk-heading-l">Water source</h1>
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                Will your water source change?
-              </h1>
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <h2 class="govuk-fieldset__heading">
+                Where does your current irrigation water come from?
+              </h2>
             </legend>
-            <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
-            Where does your current irrigation water come from?
-            <span class="govuk-hint">Select one or two options</span>
-            </div>
+
+            <div id="water-source" class="govuk-hint">
+            Select one or two options</div>
+
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-current-1" name="irrigation-current" type="checkbox" value="Peak flow" {{ checked("irrigation-current", "Peak flow") }}>
@@ -59,14 +60,18 @@
             </div>
           </fieldset>
         </div>
-        <br>
+
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-          <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
-             Where will the irrigation water come from?
-            <span class="govuk-hint">Select one or two options</span>
-            </div>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h2 class="govuk-fieldset__heading">
+                  Where will the irrigation water come from?
+                </h2>
+              </legend>
+
+              <div id="water-source" class="govuk-hint">
+              Select one or two options</div>
+              <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target" type="checkbox" value="Peak flow" {{ checked("irrigation-target", "Peak flow") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-1">
@@ -100,41 +105,41 @@
             </div>
           </fieldset>
         </div>
-        <br><br>
+
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+            class="govuk-button govuk-button--secondary" data-module="govuk-button"
           >
-            Back to summary page
+            Back to score
           </button>
         {% endif %}
 
 
       </form>
   </div>
-  <div class="govuk-grid-column-one-third govuk-!-padding-5">
+  <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-            RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+            RPA wants to fund projects that:
                    <ul>
                     <li>improve the environment</li>
                     <li>improve water sustainability</li>
                    </ul>
 
-            RPA will not fund projects where water is supplied by:    
+            RPA will not fund projects where water is supplied by:
             <ul>
               <li>summer water surface abstraction</li>
               <li>mains</li>
-            </ul> 
-        </div>         
-      </aside>   
+            </ul>
+        </div>
+      </aside>
   </div>
   </div>
-</main>  
+</main>
 
 {% endblock %}
