--- a/app/views/water/current/productivity.html
+++ b/app/views/water/current/productivity.html
@@ -2,7 +2,7 @@
 productivity? {% endblock %} {% block beforeContent %}
 <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %} {% block content %}
-<main class="govuk-main-wrapper">
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -95,25 +95,25 @@ productivity? {% endblock %} {% block beforeContent %}
       {% if data['COMPLETED'] == true %}
       <button
         onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-        class="govuk-button govuk-!-margin-right-1"
+        class="govuk-button govuk-button--secondary"
         data-module="govuk-button"
       >
-        Back to summary page
+        Back to score
       </button>
       {% endif %}
     </form>
   </div>
-<div class="govuk-grid-column-one-third govuk-!-padding-5">
+<div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Funding  priorities</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-           RPA wants to fund projects that: 
+        <h3 class="govuk-heading-s"> Funding  priorities</h3>
+        <div class="govuk-body govuk-!-font-size-19">
+           RPA wants to fund projects that:
                    <ul>
                     <li>improve productivity </li>
                    </ul>
-        </div>         
-      </aside>   
-</div>  
+        </div>
+      </aside>
+</div>
 </div>
 </main>
 {% endblock %}
