--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -52,7 +52,7 @@ Existing size storage
 
                 {
                   value: "Up to 6 months but it is no longer serviceable",
-                  text: "Up to 6 months but it is no longer fit for purpose",
+                  text: "6 months or more, but it is no longer fit for purpose",
                   conditional: {
                   html:numberMonths2
                 },
@@ -60,7 +60,7 @@ Existing size storage
                 },
                 {
                   value: "At least 6 months",
-                  text: "6 months or more",
+                  text: "6 months or more, and it is fit for purpose",
                   checked: checked("existing-size-storage", "At least 6 months")
                 }
               ]
@@ -79,7 +79,7 @@ Existing size storage
           </h2>
           <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
             For example, if you have 4 months’ serviceable storage, we will fund another 2 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 4 months.<br><br>
-            Any capacity above 6 months is not covered by the grant.<br>
+            You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.<br>
             <details class="govuk-details" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
