--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -20,9 +20,9 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Guidance: Water Management Grant</a></p>
+        <a href='water/current/guidance' class="govuk-link--no-visited-state">Guidance: Water Management Grant</a></p>
           <p class='govuk-list app-list--definition'>
-            <a href='#' class="govuk-link--no-visited-state">Start page</a><br>
+            <a href='water/current/start' class="govuk-link--no-visited-state">Start page</a><br>
             Specialist start page, hosted on GOV.UK</p>
 
         <p class='govuk-list app-list--definition'>
