--- a/app/views/water/current/start.html
+++ b/app/views/water/current/start.html
@@ -10,23 +10,21 @@
 {% endblock %}
 
 {% block beforeContent %}
-<div class="govuk-breadcrumbs">
-  <ol class="govuk-breadcrumbs__list">
-    <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="https://www.gov.uk">Home</a>
-    </li>
-    <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link">{{ serviceName }}</a>
-    </li>
-  </ol>
-</div>
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems  .'
+  }) }}
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
      <div class="govuk-body">
-        <h1 class="govuk-heading-l">
+        <h1 class="govuk-heading-xl">
           {% if serviceName %} {{ serviceName }} {% endif %}
         </h1>
         <p>Use this service to:</p>
@@ -34,8 +32,22 @@
           <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
           <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
         </ul>
-        <p>If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.</p>
-      </div>
+
+        <div class="govuk-body">
+          <h2 class="govuk-heading-m">Who can apply</h2>
+          <p>You can apply if you:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>grow crops for the food industry, are a nursery growing ornamentals or are a forestry nursery</li>
+            <li>will do the grant-funded work in England</li>
+            <li>an estimate the project costs will be over £87,500</li>
+          </ul>
+        </div>
+
+        <div class="govuk-inset-text">
+        If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
+        </div>
+
+
     <br>
     <div class="govuk-body">
     <a href="{{ nextUrl }}" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
@@ -53,6 +65,28 @@
         <li>information about the project (for example, irrigated land in hectares)</li>
         <li>estimated total cost of the items you need</li>
       </ul>
+      <p class="govuk-body govuk-!-margin-bottom-8">If you do not enter any information for more than 20 minutes, your
+application will time out and you  will have to start again. </p>
+    </div>
+    <div class="govuk-body">
+      <h3 class="govuk-heading-m govuk-!-margin-top-2">Problems using the online service</h3>
+      <p class="govuk-body">If you have any problems using the online  service, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
+      <h3 class="govuk-heading-s">Telephone</h3>
+
+      <ul class="govuk-list">
+    <li>Telephone: 03000 200 301</li>
+    <li>Monday to Friday, 9am to 5pm (except public holidays)</li>
+    </ul>
+    <p class="govuk-body">
+    <a class="govuk-link" href="https://www.gov.uk/call-charges">Find out about call charges</a>
+    </p>
+
+    <h3 class="govuk-heading-s">Email</h3>
+
+    <ul class="govuk-list">
+    <li><a class="govuk-link" href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></li>
+
+    </ul>
     </div>
   </div>
 </div>
