--- a/app/views/water/current/tenancy.html
+++ b/app/views/water/current/tenancy.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Are your land or premises rented, leased or tenanted?
+Tenancy page
 {% endblock %}
 
 {% block beforeContent %}
@@ -10,7 +10,6 @@
 
 {% block content %}
 
-<main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -21,7 +20,10 @@
                 Is the planned project on land the farm business owns?
               </h1>
             </legend>
-            <br><br>
+            <div id="tenancy-hint" class="govuk-hint">
+              The location of the project
+            </div>
+
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="tenancy" name="tenancy" type="radio" value="Yes" {{ checked("tenancy", "Yes") }}>
@@ -50,13 +52,12 @@
         {% endif %}
       </form>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
+    <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
           <h3 class="govuk-heading-m"> Eligibility </h3>
-          <p> The land must be owned or have a tenancy in place until 2026 <br> before starting the project.</p>
+          <p>You must own the land or have a tenancy in place for 5 years after the final grant payment.</p>
       </aside>
     </div>
   </div>
-</main>  
 
 {% endblock %}
