--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,13 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="ahw" class="govuk-lik govuk-link--no-visited-state">
+          Animal health and welfare grant
+        </a></td>
+      <td class="govuk-table__cell">Checker (v1, last updated on 16 September 2022)</td>
+    </tr>
+
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="water" class="govuk-lik govuk-link--no-visited-state">
           Water management grant
         </a></td>
