GRANTS-969, GRANTS-970, GRANTS-971, GRANTS-972, GRANTS-974

--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -34,7 +34,7 @@
         <h2 class="govuk-heading-l">Design history</h2>
 
         <p class='govuk-list app-list--definition'>
-          <a href='#' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
+          <a href='ahw/current/business' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
           No prototype yet. <br>
             <span class="govuk-body govuk-!-font-size-14">#Last updated on 16 September 2022<br/>
             </span></p>
@@ -48,7 +48,7 @@
 
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
-                <a href='#' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
+                <a href='https://www.sketch.com/s/64be7a81-5611-47c6-9210-1408ec4420c1' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
                   <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">No wireframes yet.</p>
       </div>
 {% endblock %}
