--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -35,8 +35,8 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='ahw/current/business' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
-          No prototype yet. <br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 16 September 2022<br/>
+          User journey currently in build, however 'User and business details' section exists. This prottoype has not been tested yet. <br>
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 28 September 2022<br/>
             </span></p>
 
 
