GRRANTS-1166, GRANTS-1167, GRANTS-1165

--- a/app/views/ahw/current/agent-details.html
+++ b/app/views/ahw/current/agent-details.html
@@ -57,6 +57,13 @@
         </div>
 
         <div class="govuk-form-group">
+          <label class="govuk-label" for="confirm-farmer-email">
+              Confirm email address
+          </label>
+          <input class="govuk-input  govuk-!-width-two-thirds" id="confirm-farmer-email" name="confirm-farmer-email" type="confirm-farmer-email" spellcheck="false"  value="{{ data['confirm-farmer-email'] }}">
+        </div>
+        
+        <div class="govuk-form-group">
           <label class="govuk-label" for="agent-landline">
               Mobile number
           </label>
