--- a/app/views/ahw/current/applicant-details.html
+++ b/app/views/ahw/current/applicant-details.html
@@ -53,6 +53,12 @@
           </label>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-email" name="farmer-email" type="farmer-email" spellcheck="false" aria-describedby="farmer-email-hint" autocomplete="farmer-email" value="{{ data['farmer-email'] }}">
         </div>
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="confirm-farmer-email">
+              Confirm email address
+          </label>
+          <input class="govuk-input  govuk-!-width-two-thirds" id="confirm-farmer-email" name="confirm-farmer-email" type="confirm-farmer-email" spellcheck="false"  value="{{ data['confirm-farmer-email'] }}">
+        </div>
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-landline">
