--- a/app/views/ahw/current/business.html
+++ b/app/views/ahw/current/business.html
@@ -32,7 +32,7 @@
           <label class="govuk-label" for="project-name">
               Project name
           </label>
-          <span id="project-name-hint" class="govuk-hint">For example, Browns Hill Farm lagoon expansion project </span>
+          <span id="project-name-hint" class="govuk-hint">For example, Browns Hill Farm calf housing project</span>
           <input class="govuk-input" id="project-name" name="project-name" type="text" value="{{ data['project-name'] }}">
         </div>
 
@@ -66,8 +66,7 @@
                    <fieldset class="govuk-fieldset" aria-describedby="sbi-hint">
                      <legend class="govuk-fieldset__legend">
                        <h1 class="govuk-fieldset__heading">
-                         Single Business Identifier (SBI)
-                       </h1>
+                         Single Business Identifier (SBI) - Optional
                      </legend>
                      <div id="contact-hint" class="govuk-hint">
                        If you do not have an SBI, you will need to get one for full application
