--- a/app/views/ahw/current/views/layouts/_BASEFULL-ahw.html
+++ b/app/views/ahw/current/views/layouts/_BASEFULL-ahw.html
@@ -1,4 +1,4 @@
-{% set serviceName = "Check if you can apply for an Animal Health and Welfare grant" %}
+{% set serviceName = "Check if you can apply for an Upgrading Cattle Housing Grant" %}
 
 {% extends "layout.html" %}
 
