--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,9 +29,9 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="ahw" class="govuk-lik govuk-link--no-visited-state">
-          Animal health and welfare grant
+          Upgrading Cattle Housing Grant
         </a></td>
-      <td class="govuk-table__cell">Checker (v1, last updated on 28 September 2022)</td>
+      <td class="govuk-table__cell">Checker (v1, last updated on 4 October 2022)</td>
     </tr>
 
     <tr class="govuk-table__row">
