--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -7,20 +7,20 @@
 <!--
 <span class="govuk-caption-xl">Prototypes</span>
 -->
-<title> Adding value prototype admin</title>
+<title>Upgrading Cattle Housing Grant prototype admin</title>
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
 
 <h1 class="govuk-heading-xl">
-  Animal Health and Welfare prototype admin
+  Upgrading Cattle Housing Grant prototype admin
 </h1>
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state">Guidance: Animal Health and Welfare Cattle Housing grant</a></p>
+        <a href='#' class="govuk-link--no-visited-state">Guidance: Upgrading Cattle Housing Grant</a></p>
         <p class='govuk-list app-list--definition'>
         <a href='#' class="govuk-link--no-visited-state">Start page</a><br>
         Specialist start page, hosted on GOV.UK</p>
@@ -35,7 +35,7 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='ahw/current/business' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
-          User journey currently in build, however 'User and business details' section exists. This prottoype has not been tested yet. <br>
+          User journey currently in build, however 'User and business details' section exists. This prototype has not been tested yet. <br>
             <span class="govuk-body govuk-!-font-size-14">#Last updated on 28 September 2022<br/>
             </span></p>
 
@@ -49,6 +49,6 @@
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
                 <a href='https://www.sketch.com/s/64be7a81-5611-47c6-9210-1408ec4420c1' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
-                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">No wireframes yet.</p>
+                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Always up to date.</p>
       </div>
 {% endblock %}
